--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yeekeetoday555",
+  "name": "แนวทางหวยยี่กีวันนี้ พร้อม 4 เทคนิค แทงหวยยี่กี อย่างไรให้รวย อยากรู้ต้องดู - [ เว็บเศรษฐี ]",
   "theme": "syntax",
   "version": "1.0.35",
   "description": "แนวทางหวยยี่กีวันนี้ พร้อม 4 เทคนิค แทงหวยยี่กี อย่างไรให้รวย อยากรู้ต้องดู",
